Added demo for sprint 2 in main
* Tests for playermovement still need to be implemented
* Cpu player needs to be implemented aswell